# CAMROD

./: CONFIG_SYNC_AUDIT.md  Dockerfile.camrod.amd64  Dockerfile.camrod.arm64  MODULE_LAUNCH_COMMAND_REFERENCE.md  README.md  RUNTIME_AUDIT_PLANNING_COSTGRID_2026-03-18.md  TODO_BRINGUP_SUMMARY.md  TODO_MODULE_PARAM_CONTRACT.md  TODO_MODULE_RUNTIME_FLOW.md  TODO_NODE_EXECUTION_AUDIT.md  TODO_NODE_NAMING_AUDIT.md  TODO_VIO_REFERENCE.md  avg_msgs  lanelet2_map_(c_track_test).osm  lanelet2_maps (national_park_v0.4_no_transform).osm  lanelet2_maps (national_park_v0.5_transform).osm  lanelet2_maps (national_park_v0.6_add_camping_site).osm  map_config.yaml  map_projector_info (copy_park).yaml
avg_msgs/: CMakeLists.txt  package.xml
avg_msgs/msg/: AvgLocalizationMode.msg  AvgLocalizationMsgs.msg  AvgLocalizationStatus.msg  AvgPlanningMsgs.msg  AvgRobotInfo.msg  AvgSensingMsgs.msg  AvgSensorPose.msg  ModuleHealth.msg  SystemDiagnostic.msg
camping_cart_localization/: CMakeLists.txt  package.xml
camping_cart_localization/launch/: localization.launch.py
camping_cart_localization/scripts/: localization_diagnostic_node.py
camping_cart_localization/src/: localization_eskf_node.cpp  localization_pose_selector_node.cpp  localization_supervisor_node.cpp  navsat_to_pose_node.cpp
camrod_common/: CMakeLists.txt  README.md  package.xml
camrod_common/avg_msgs/: CMakeLists.txt  README.md  README_MIGRATION.md  package.xml
camrod_common/avg_msgs/include/avg_msgs/action/: compute_path_to_pose.hpp
camrod_common/avg_msgs/include/avg_msgs/avg_msgs/: point_cloud2_iterator.hpp
camrod_common/avg_msgs/include/avg_msgs/avg_msgs/action/: compute_path_to_pose.hpp
camrod_common/avg_msgs/include/avg_msgs/avg_msgs/msg/: bool.hpp  camera_info.hpp  color_rgba.hpp  detection2_d_array.hpp  float32.hpp  goal_status_array.hpp  header.hpp  image.hpp  imu.hpp  laser_scan.hpp  marker_array.hpp  nav_sat_fix.hpp  occupancy_grid.hpp  odometry.hpp  path.hpp  point.hpp  point32.hpp  point_cloud.hpp  point_cloud2.hpp  point_stamped.hpp  polygon_stamped.hpp  pose_stamped.hpp  pose_with_covariance_stamped.hpp  range.hpp  string.hpp  transform_stamped.hpp  (+2 more)
camrod_common/avg_msgs/include/avg_msgs/msg/: bool.hpp  camera_info.hpp  color_rgba.hpp  detection2_d_array.hpp  float32.hpp  goal_status_array.hpp  image.hpp  imu.hpp  laser_scan.hpp  marker.hpp  marker_array.hpp  nav_sat_fix.hpp  occupancy_grid.hpp  odometry.hpp  path.hpp  point.hpp  point_cloud.hpp  point_cloud2.hpp  point_stamped.hpp  polygon_stamped.hpp  pose_stamped.hpp  pose_with_covariance_stamped.hpp  quaternion.hpp  range.hpp  set_parameters_result.hpp  string.hpp  transform_stamped.hpp  twist_stamped.hpp  twist_with_covariance_stamped.hpp
camrod_common/avg_msgs/msg/: AvgBringupMsgs.msg  AvgLocalizationDiagnostics.msg  AvgMapMsgs.msg  AvgPerceptionMsgs.msg  AvgPlatformMsgs.msg  AvgRobotSpecifications.msg  AvgSensingCamera.msg  AvgSensingGnss.msg  AvgSensingImu.msg  AvgSensingLidar.msg  AvgSensingMsgs.msg  AvgSensingRadar.msg  AvgSensorKitMsgs.msg  AvgSystemMsgs.msg
camrod_common/avg_msgs/srv/: RequestGoalByKey.srv
camrod_common/camrod_common/: __init__.py
camrod_common/camrod_common/action/: __init__.py
camrod_common/camrod_common/msg/: __init__.py
camrod_common/include/camrod_common/action/: compute_path_to_pose.hpp
camrod_common/include/camrod_common/msg/: avg_bringup_msgs.hpp  avg_localization_diagnostics.hpp  avg_localization_mode.hpp  avg_localization_msgs.hpp  avg_localization_status.hpp  avg_map_msgs.hpp  avg_perception_msgs.hpp  avg_planning_msgs.hpp  avg_platform_msgs.hpp  avg_robot_info.hpp  avg_robot_specifications.hpp  avg_sensing_camera.hpp  avg_sensing_gnss.hpp  avg_sensing_imu.hpp  avg_sensing_lidar.hpp  avg_sensing_msgs.hpp  avg_sensing_radar.hpp  avg_sensor_kit_msgs.hpp  avg_sensor_pose.hpp  avg_system_msgs.hpp  bool.hpp  camera_info.hpp  color_rgba.hpp  detection2_d_array.hpp  float32.hpp  goal_status_array.hpp  header.hpp  image.hpp  imu.hpp  laser_scan.hpp  marker.hpp  marker_array.hpp  module_health.hpp  nav_sat_fix.hpp  occupancy_grid.hpp  odometry.hpp  path.hpp  point.hpp  point32.hpp  point_cloud.hpp  (+13 more)
camrod_perception/: CMakeLists.txt  README.md  package.xml
camrod_perception/config/: perception_params.yaml
camrod_perception/launch/: perception.launch.py
camrod_perception/scripts/: perception_diagnostic_node.py
camrod_perception/src/: obstacle_fusion_node.cpp  obstacle_lidar_node.cpp
camrod_planning/: CMakeLists.txt  README.md  package.xml
camrod_planning/config/: centerline_snapper.yaml  goal_replanner.yaml  goal_snapper.yaml  nav2_lanelet.yaml  path_cost_grids.yaml  planning_state_machine.yaml  planning_state_machine_keypoints.yaml
camrod_planning/launch/: nav2_lanelet.launch.py  path_cost_grids.launch.py  planning.launch.py  planning_top.launch.py
camrod_planning/scripts/: nav2_lifecycle_startup_retry_node.py  planning_diagnostic_node.py  planning_state_machine_node.py
camrod_planning/src/: centerline_snapper_node.cpp  goal_replanner_node.cpp  goal_snapper_node.cpp  local_path_extractor_node.cpp
camrod_sensor_kit/: CMakeLists.txt  README.md  package.xml
camrod_sensor_kit/launch/: sensor_kit.launch.py
camrod_sensor_kit/scripts/: sensor_kit_diagnostic_node.py
camrod_sensor_kit/src/: robot_params.cpp
camrod_sensor_kit/urdf/: camrod_sensor_kit.xacro
camrod_system/: CMakeLists.txt  README.md  package.xml
camrod_system/launch/: module_checkers.launch.py  system_checker.launch.py  system_top.launch.py
camrod_system/scripts/: module_checker_node.py  system_checker_node.py  system_diagnostic_node.py
todo/camping_cart_perception/: CMakeLists.txt  README.md  package.xml
todo/camping_cart_perception/config/: perception_params.yaml
todo/camping_cart_perception/src/: obstacle_fusion_node.cpp  obstacle_lidar_node.cpp
todo/vanjee_ws/src/vanjee_dbscan_bbox/: CMakeLists.txt  package.xml
todo/vanjee_ws/src/vanjee_dbscan_bbox/src/: dbscan_bbox_node.cpp
todo/vanjee_ws/src/vanjee_ground_filter/: CMakeLists.txt  package.xml
todo/vanjee_ws/src/vanjee_ground_filter/src/: ground_filter_node.cpp
(+256 files in other folders)
